--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <script src="https://unpkg.com/three@0.112.1/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/threex.windowresize/master/threex.windowresize.js"></script>
     <script src="app.js" type="module"></script>
+    <button id='grid'>Grid</button>
+    <button id='distances'>Distances</button>
+    <!-- <canvas id="three"></canvas> -->
 </body>
 
 </html>
