--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <button id='sizes'>Sizes</button>
     <button id='themes'>Themes</button>
     <button id='distances'>Distances</button>
-    <!-- <canvas id="three"></canvas> -->
+    <div>
+        <canvas id="three" style="width:800px; height:600px"></canvas>
+    </div>
 </body>
 
 </html>
