--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://unpkg.com/three@0.112.1/build/three.js"></script>
     <script src="https://unpkg.com/three@0.112.1/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/threex.windowresize/master/threex.windowresize.js"></script>
-    <script src="./app.js" type="module"></script>
+    <script type="module" src="./app.js"></script>
     <!-- <button id='grid'>Grid</button> -->
     <button id='sizes'>Sizes</button>
     <button id='themes'>Themes</button>
