--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <!-- <link rel="shortcut icon" href="icon.jpg"> -->
-    <title>Letters 3D</title>
+    <title>Galaxy</title>
     <style>
         body {
             margin: 0;
