--- a/index.html
+++ b/index.html
@@ -21,14 +21,21 @@
     <script src="https://unpkg.com/three@0.112.1/build/three.js"></script>
     <script src="https://unpkg.com/three@0.112.1/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/threex.windowresize/master/threex.windowresize.js"></script>
-    <script type="module" src="./app.js"></script>
     <!-- <button id='grid'>Grid</button> -->
     <button id='sizes'>Sizes</button>
     <button id='themes'>Themes</button>
     <button id='distances'>Distances</button>
+
     <div>
         <canvas id="three" style="width:800px; height:600px"></canvas>
     </div>
+
+
+    <script type="text/javascript" src="./Cluster.js"></script>
+    <script type="text/javascript" src="./Galaxy.js"></script>
+    <script type="text/javascript" src="./Orbit.js"></script>
+    <script type="text/javascript" src="./Planet.js"></script>
+    <script type="text/javascript" src="./app.js"></script>
 </body>
 
 </html>
