--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
 
 
+    <script type="text/javascript" src="./utils.js"></script>
     <script type="text/javascript" src="./Cluster.js"></script>
     <script type="text/javascript" src="./Galaxy.js"></script>
     <script type="text/javascript" src="./Orbit.js"></script>
