--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </div>
 
     <div id="project-details" style="display: none; position: absolute;">
-        <label id="project-name" style="background-color: cornflowerblue"></label>
         <div style="width: 100%;">
-            <img id="project-image" style="width: 300px;"></label>
+            <img id="project-image" style="width: 180px;"></label>
         </div>
+        <label id="project-name" style="background: #000; color: #fff; width: 100%; padding: 4px 8px;"></label>
     </div>
 
     <script type="text/javascript" src="./utils.js"></script>
