--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script type="text/javascript" src="./Cluster.js"></script>
     <script type="text/javascript" src="./Galaxy.js"></script>
     <script type="text/javascript" src="./Orbit.js"></script>
+    <script type="text/javascript" src="./OrbitCluster.js"></script>
     <script type="text/javascript" src="./Planet.js"></script>
     <script type="text/javascript" src="./app.js"></script>
 </body>
