--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <script src="./lib/three.js"></script>
     <script src="./lib/OrbitControls.js"></script>
-    <script src="./lib/threex.windowresize.js"></script>
+    <!-- <script src="./lib/threex.windowresize.js"></script> -->
     <!-- <script src="https://unpkg.com/three@0.112.1/build/three.js"></script>
     <script src="https://unpkg.com/three@0.112.1/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/threex.windowresize/master/threex.windowresize.js"></script> -->
