--- a/index.html
+++ b/index.html
@@ -26,8 +26,41 @@
     <script src="https://cdn.rawgit.com/jeromeetienne/threex.windowresize/master/threex.windowresize.js"></script> -->
     <!-- <button id='grid'>Grid</button> -->
     <button id='sizes'>Sizes</button>
+    <label id='sizes1'>1</label>
+    <label id='sizes2'>2</label>
+    <label id='sizes3'>3</label>
+    <label id='sizes4'>4</label>
+    <label id='sizes5'>5</label>
+    <label id='sizes6'>6</label>
+    <label id='sizes7'>7</label>
+    <label id='sizes8'>8</label>
+    <label id='sizes9'>9</label>
+    <label id='sizes10'>10</label>
+    <br />
     <button id='themes'>Themes</button>
+    <label id='themes1'>1</label>
+    <label id='themes2'>2</label>
+    <label id='themes3'>3</label>
+    <label id='themes4'>4</label>
+    <label id='themes5'>5</label>
+    <label id='themes6'>6</label>
+    <label id='themes7'>7</label>
+    <label id='themes8'>8</label>
+    <label id='themes9'>9</label>
+    <label id='themes10'>10</label>
+    <br />
     <button id='distances'>Distances</button>
+    <label id='distances1'>1</label>
+    <label id='distances2'>2</label>
+    <label id='distances3'>3</label>
+    <label id='distances4'>4</label>
+    <label id='distances5'>5</label>
+    <label id='distances6'>6</label>
+    <label id='distances7'>7</label>
+    <label id='distances8'>8</label>
+    <label id='distances9'>9</label>
+    <label id='distances10'>10</label>
+    <br />
 
     <div>
         <canvas id="three" style="width:800px; height:600px"></canvas>
