--- a/index.html
+++ b/index.html
@@ -25,41 +25,41 @@
     <script src="https://unpkg.com/three@0.112.1/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/threex.windowresize/master/threex.windowresize.js"></script> -->
     <!-- <button id='grid'>Grid</button> -->
-    <button id='sizes'>Sizes</button>
-    <label id='sizes1'>1</label>
-    <label id='sizes2'>2</label>
-    <label id='sizes3'>3</label>
-    <label id='sizes4'>4</label>
-    <label id='sizes5'>5</label>
-    <label id='sizes6'>6</label>
-    <label id='sizes7'>7</label>
-    <label id='sizes8'>8</label>
-    <label id='sizes9'>9</label>
-    <label id='sizes10'>10</label>
+    <button id='sizes' onclick="galaxy.changeLayout('sizes');">Sizes</button>
+    <label id='sizes1' onmouseover="galaxy.emphasizeLayout('sizes', 1)">1</label>
+    <label id='sizes2' onmouseover="galaxy.emphasizeLayout('sizes', 2)">2</label>
+    <label id='sizes3' onmouseover="galaxy.emphasizeLayout('sizes', 3)">3</label>
+    <label id='sizes4' onmouseover="galaxy.emphasizeLayout('sizes', 4)">4</label>
+    <label id='sizes5' onmouseover="galaxy.emphasizeLayout('sizes', 5)">5</label>
+    <label id='sizes6' onmouseover="galaxy.emphasizeLayout('sizes', 6)">6</label>
+    <label id='sizes7' onmouseover="galaxy.emphasizeLayout('sizes', 7)">7</label>
+    <label id='sizes8' onmouseover="galaxy.emphasizeLayout('sizes', 8)">8</label>
+    <label id='sizes9' onmouseover="galaxy.emphasizeLayout('sizes', 9)">9</label>
+    <label id='sizes10' onmouseover="galaxy.emphasizeLayout('sizes', 10)">10</label>
     <br />
-    <button id='themes'>Themes</button>
-    <label id='themes1'>1</label>
-    <label id='themes2'>2</label>
-    <label id='themes3'>3</label>
-    <label id='themes4'>4</label>
-    <label id='themes5'>5</label>
-    <label id='themes6'>6</label>
-    <label id='themes7'>7</label>
-    <label id='themes8'>8</label>
-    <label id='themes9'>9</label>
-    <label id='themes10'>10</label>
+    <button id='themes' onclick="galaxy.changeLayout('themes');">Themes</button>
+    <label id='themes2' onmouseover="galaxy.emphasizeLayout('themes', 2)">2</label>
+    <label id='themes1' onmouseover="galaxy.emphasizeLayout('themes', 1)">1</label>
+    <label id='themes3' onmouseover="galaxy.emphasizeLayout('themes', 3)">3</label>
+    <label id='themes4' onmouseover="galaxy.emphasizeLayout('themes', 4)">4</label>
+    <label id='themes5' onmouseover="galaxy.emphasizeLayout('themes', 5)">5</label>
+    <label id='themes6' onmouseover="galaxy.emphasizeLayout('themes', 6)">6</label>
+    <label id='themes7' onmouseover="galaxy.emphasizeLayout('themes', 7)">7</label>
+    <label id='themes8' onmouseover="galaxy.emphasizeLayout('themes', 8)">8</label>
+    <label id='themes9' onmouseover="galaxy.emphasizeLayout('themes', 9)">9</label>
+    <label id='themes10' onmouseover="galaxy.emphasizeLayout('themes', 10)">10</label>
     <br />
-    <button id='distances'>Distances</button>
-    <label id='distances1'>1</label>
-    <label id='distances2'>2</label>
-    <label id='distances3'>3</label>
-    <label id='distances4'>4</label>
-    <label id='distances5'>5</label>
-    <label id='distances6'>6</label>
-    <label id='distances7'>7</label>
-    <label id='distances8'>8</label>
-    <label id='distances9'>9</label>
-    <label id='distances10'>10</label>
+    <button id='distances' onclick="galaxy.changeLayout('distances');">Distances</button>
+    <label id='distances1' onmouseover="galaxy.emphasizeLayout('distances', 1)">1</label>
+    <label id='distances2' onmouseover="galaxy.emphasizeLayout('distances', 2)">2</label>
+    <label id='distances3' onmouseover="galaxy.emphasizeLayout('distances', 3)">3</label>
+    <label id='distances4' onmouseover="galaxy.emphasizeLayout('distances', 4)">4</label>
+    <label id='distances5' onmouseover="galaxy.emphasizeLayout('distances', 5)">5</label>
+    <label id='distances6' onmouseover="galaxy.emphasizeLayout('distances', 6)">6</label>
+    <label id='distances7' onmouseover="galaxy.emphasizeLayout('distances', 7)">7</label>
+    <label id='distances8' onmouseover="galaxy.emphasizeLayout('distances', 8)">8</label>
+    <label id='distances9' onmouseover="galaxy.emphasizeLayout('distances', 9)">9</label>
+    <label id='distances10' onmouseover="galaxy.emphasizeLayout('distances', 10)">10</label>
     <br />
 
     <div>
