--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
     <label id='distances10' onmouseover="galaxy.emphasizeLayout('distances', 10)"  onmouseout="galaxy.emphasizeLayout()" hidden="true">10</label>
     <br />
     <br />
+    <button id="night-mode" onclick="galaxy.nightMode(true)">Night mode</button>
+    <button id="day-mode" onclick="galaxy.nightMode(false)">Day mode</button>
 
     <div>
         <canvas id="three" style="width:800px; height:600px"></canvas>
