color from theme

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <div id="project-details" style="display: none; position: absolute;">
-        <div style="background-color: green;">
+        <div id="project-back" style="background-color: green;">
             <div style="width: 100%;">
                 <img id="project-image" style="width: 180px; height: auto; opacity: 0.7;"></label>
             </div>
