--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <div style="width: 100%;">
                 <img id="project-image" style="width: 180px; height: auto; opacity: 0.7;"></label>
             </div>
-            <label id="project-name" style="background: #000; color: #fff; width: 100%; padding: 4px 8px; opacity: 0.7; width: 180px; height: auto;">
-            </label>
+            <div id="project-name" style="background: #000; color: #fff; width: 100%; padding: 4px 8px; opacity: 0.7; width: 180px; height: auto;">
+            </div>
         <div>
     </div>
 
