--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <canvas id="three" style="width:800px; height:600px"></canvas>
     </div>
 
-    <div id="project-details" style="display: none; position: absolute;">
+    <div id="project-details" style="display: none; position: absolute;border: 2px solid #000">
         <div id="project-back" style="background-color: green;">
             <div style="width: 100%;">
                 <img id="project-image" style="width: 180px; height: auto; opacity: 0.7;"></label>
