--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
     <label id='distances10' onmouseover="galaxy.emphasizeLayout('distances', 10)"  onmouseout="galaxy.emphasizeLayout()" hidden="true">10</label>
     <br />
     <br />
-    <button id="night-mode" onclick="galaxy.nightMode(true); document.body.style.background = 'black'">Night mode</button>
-    <button id="day-mode" onclick="galaxy.nightMode(false); document.body.style.background = 'white'">Day mode</button>
+    <p><a class="switch-night" href="#" style="color: green;" onclick="galaxy.nightMode()">תצוגת לילה</a></p>
 
     <div>
         <canvas id="three" style="width:800px; height:600px"></canvas>
