--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <br />
     <br />
     <p><a class="switch-night" href="#" style="color: green;" onclick="galaxy.nightMode()">תצוגת לילה</a></p>
+    <p><a class="switch-pause" href="#" style="color: orange;" onclick="galaxy.pause()">השהה</a></p>
 
     <div>
         <canvas id="three" style="width:800px; height:600px"></canvas>
