--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
     <!-- <script src="https://unpkg.com/three@0.112.1/build/three.js"></script>
     <script src="https://unpkg.com/three@0.112.1/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/threex.windowresize/master/threex.windowresize.js"></script> -->
+
+
+    <script>
+        // const jsonSource = './planets.json';
+        const jsonSource = 'http://arch2020.s193.upress.link/wp-json/wp/v2/posts?per_page=100';
+    </script>
+
     <p>
         <a class="switch-night" href="#" style="color: green;" onclick="galaxy.nightMode()">תצוגת לילה</a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
