--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 
     <script>
-        // const jsonSource = './planets.json';
-        const jsonSource = 'http://arch2020.s193.upress.link/wp-json/wp/v2/posts?per_page=100';
+        const jsonSource = './planets.json';
+        // const jsonSource = 'http://arch2020.s193.upress.link/wp-json/wp/v2/posts?per_page=100';
     </script>
 
     <p>
@@ -87,13 +87,15 @@
     </div>
 
     <div id="project-details" style="display: none; position: absolute;border: 2px solid #000">
-        <div id="project-back" style="background-color: green;">
-            <div style="width: 100%;">
-                <img id="project-image" style="width: 180px; height: auto; opacity: 0.7;"></label>
+        <a id="project-link" href="#">
+            <div id="project-back" style="background-color: green;">
+                <div style="width: 100%;">
+                    <img id="project-image" style="width: 180px; height: auto; opacity: 0.7;"></label>
+                </div>
+                <div id="project-name" style="background: #000; color: #fff; width: 100%; padding: 4px 8px; opacity: 0.7; width: 180px; height: auto;">
+                </div>
             </div>
-            <div id="project-name" style="background: #000; color: #fff; width: 100%; padding: 4px 8px; opacity: 0.7; width: 180px; height: auto;">
-            </div>
-        <div>
+        </a>
     </div>
 
     <script type="text/javascript" src="./utils.js"></script>
